--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>ISS Tracker</title>
+    
+    <!-- GPU acceleration hints for hardware acceleration -->
+    <style>
+      canvas {
+        will-change: transform;
+        transform: translateZ(0);
+        backface-visibility: hidden;
+        perspective: 1000px;
+      }
+      
+      /* Optimize root container for GPU compositing */
+      #root {
+        transform: translateZ(0);
+        will-change: transform;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
